# chatguide

./: .coverage  .gitignore  EXTRACTION_README.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_NETLIFY.md  REFACTOR_NOTES.md  VISUALIZER_README.md  chat_service.py  chatbot_config.yaml  chatbot_log.txt  chatbot_visualizer.py  chatguide.py  chatguide_codebase.txt  chatguide_python_codebase.txt  config.yaml  consolidated_chatbot_code.txt  conversational_chatbot.py  create_consolidated_code.py  data_schema.yaml  demo_clean.py  demo_prompt.py  example.py  export_codebase.py  flow.txt  gemini_sample.py  integration_test.py  keep.md  llm.py  main.py  netlify.toml  prompt.py  pyproject.toml  requirements.txt  run_visualizer.py  schema.py  simple_chat.py  streamlit_app.py  (+15 more)
configs/: config.yaml  config_.yaml
example/: README.md  app.py  run.py  test_env.py  test_imports.py
examples/: streamlit_demo.py
examples/fastapi_app/: README.md  main.py  requirements.txt
js/: README.md  README_LOCAL.md  package-lock.json  package.json  server.js  tsconfig.json
js/public/: index.html
js/src/: Adjustments.ts  ChatGuide.ts  Plan.ts  index.ts  schemas.ts
js/src/core/: Audit.ts  (+5 more)
moving/: README.md  chat_service.py  pyproject.toml  requirements.txt  streamlit_app.py
netlify/functions/: chat.ts  package.json
netlify/public/: index.html
old/: chatguide_advanced.py
python/: DEBUG_README.md  README.md  automated_test.py  debug_raw_response.py  debug_test.py  example_chat copy.py  example_chat.py  pyproject.toml  requirements.txt  test_checkpoint_fix.py  verify_refactor.py
python/chatguide/: adjustments.py  chatguide.py  schemas.py  state.py  tool_executor.py
python/examples/: hotel_config.yaml
python/scripts/: validate_config.py
python/tests/: __init__.py
src/chatguide/: __init__.py  chatguide.py  plan.py  schemas.py  state.py
static/: chatguide.pptm
tests/: conftest.py  test_comprehensive.py
tests/debug/: check_age_prompt.py  debug_prompt_test.py  simple_test.py  test_completed_filtering.py
(+55 files in other folders)
