[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatguide"
version = "0.1.1"
description = "A lightweight, modular framework for building goal-oriented conversational AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dorian Herle", email = "dorian@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "streamlit>=1.28.0",
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/dorianherle/chatguide"
Repository = "https://github.com/dorianherle/chatguide"
Documentation = "https://github.com/dorianherle/chatguide#readme"
Issues = "https://github.com/dorianherle/chatguide/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chatguide = ["core/core_prompt.yaml", "static/*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
