[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatguide"
version = "0.1.0"
description = "Chat-guided conversational task flow framework"
authors = [{ name = "Dorian Herle" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
